# rust-nn

./: Cargo.toml  README.md  trained_model.json
src/: adam.rs  dnn.rs  lib.rs  sgd.rs  utils.rs
