[package]
name = "rust-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
polars = { version = "0.40.0", features = ["lazy", "ndarray"] }
polars-arrow = "0.40.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "train"
path = "src/bin/train.rs"
